[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "b2luigi"
author = "Nils Braun, Michael Eliachevitch, The Belle II Collaboration"
author-email = "software-b2luigi@belle2.org"
home-page = "https://github.com/belle2/b2luigi"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
requires = [
	 "luigi>=3.0.2",
	 "parse>=1.8.4",
	 "GitPython>=2.1.11",
	 "colorama>=0.3.9",
	 "cachetools>=2.1.0",
	 "jinja2",
	 "retry2>=0.9.3"]

[tool.flit.metadata.requires-extra]
# Use the same versions of sphinx and sphinx-book-theme
# as in the latest version of the basf2 externals
# (see https://github.com/belle2/externals)
doc = [
    "sphinx==4.3.2",
    "sphinx-book-theme==0.3.3",
    "sphinxcontrib-applehelp==1.0.2",
    "sphinxcontrib-devhelp==1.0.2",
    "sphinxcontrib-htmlhelp==2.0.0",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==1.0.3",
    "sphinxcontrib-serializinghtml==1.1.5",
    "sphinx-autobuild"
]

[tool.ruff]
line-length = 120

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]
"examples/gbasf2/example_mdst_analysis.py" = ["E501"]
